# imgread_benchmark

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  noxfile.py  noxfile_conda.py  noxfile_conda_img_libs.py  noxfile_conda_lint.py  noxfile_img_libs.py  noxfile_lint.py  requirements.txt  requirements_dev.txt  requirements_img_libs.txt  requirements_img_libs_conda.txt  setup.cfg
src/imgread/: __init__.py  benchmark.py  cl_app.py  cl_bench.py  get_img_filenames.py  img_libs.py  read_image.py  read_img.py
src/imgread/img_libs/: PIL.py  __init__.py  accimage.py  convert.py  cv2.py  imageio.py  img_libs_pkgs.py  jpeg4py.py  kornia.py  pyvips.py  skimage.py  torchvision.py
src/imgread_benchmark/: read_img.py
src/imgread_benchmark/img_libs/: img_libs_pkgs.py  imread.py
tests/: test_get_img_filenames.py  test_image_libs.py
tmp_nbs/: tst.ipynb  tst.py
