[metadata]
name = imgread
version = attr: imgread.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Docs from jupyter notebooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/imgread
license = apache2
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    imgread=imgread.cl_app:app
    imgread_benchmark=imgread.cl_bench:app
pipx.run =
    imgread=imgread.cl_app:app
    imgread_benchmark=imgread.cl_bench:app